--- a/mon-app/src/components/Slideshow/Slideshow.scss
+++ b/mon-app/src/components/Slideshow/Slideshow.scss
@@ -25,7 +25,9 @@
     }
   }
   &__image {
+    // aspect-ratio: 2/1;
     width: 100%;
+    max-height: 28rem;
     object-fit: cover;
   }
   &__counter {
